Editing the code